create selector for axis

--- a/stylesheets/base/colors.scss
+++ b/stylesheets/base/colors.scss
@@ -1,6 +1,5 @@
 $white: #e7e7e7;
 $lightest-gray: #f3f3f3;
 $light-gray: #ededed;
-$gray-gray: #c4c4c4;
-$gray: #828282;
+$gray: #c4c4c4;
 $dark-gray: #656565;
