--- a/stylesheets/components/content.scss
+++ b/stylesheets/components/content.scss
@@ -4,16 +4,18 @@
   max-width: 1200px;
 }
 
-.selector {
+.module {
+  padding: 30px;
+  margin-bottom: 10px;
+  background-color: white;
   border-radius: 6px;
   border: 1px solid $light-gray;
-  background-color: white;
-  padding: 15px;
+}
 
+.selector {
   .header {
     width: 100%;
-    padding: 15px 0;
+    padding-bottom: 15px;
     box-sizing: border-box;
   }
-
 }
