--- a/stylesheets/base/colors.scss
+++ b/stylesheets/base/colors.scss
@@ -3,3 +3,6 @@ $lightest-gray: #f3f3f3;
 $light-gray: #ededed;
 $gray: #c4c4c4;
 $dark-gray: #656565;
+$teal: #aaffea;
+// $blue: #4597f1;
+$blue: #2684ff;
