--- a/stylesheets/base/layout.scss
+++ b/stylesheets/base/layout.scss
@@ -11,20 +11,20 @@ h1 {
 }
 
 h2 {
-  font-family: $header;
+  font-family: $display;
   font-size: 28px;
   text-transform: uppercase;
 }
 
 h3 {
-  font-family: $header;
+  font-family: $display;
   font-size: 18px;
   color: $gray;
   font-weight: bold;
 }
 
 h4 {
-  font-family: $header;
+  font-family: $display;
   font-size: 12px;
   text-transform: uppercase;
 }
