--- a/stylesheets/components/content.scss
+++ b/stylesheets/components/content.scss
@@ -18,4 +18,20 @@
     padding-bottom: 15px;
     box-sizing: border-box;
   }
+  .select {
+    &__control {
+      font-family: $text;
+      color: $gray;
+    }
+    &__menu {
+      font-family: $text;
+      color: $gray;
+    }
+  }
+}
+
+.vis {
+  background: linear-gradient(60deg, $teal, $blue);
+  background: -webkit-linear-gradient(60deg, $teal, $blue);
+  h1 { color: white; }
 }
