--- a/stylesheets/components/content.scss
+++ b/stylesheets/components/content.scss
@@ -13,6 +13,9 @@
 }
 
 .selector {
+  flex: 1;
+  &:first-child { margin-right: 5px; }
+  &:last-child { margin-left: 5px; }
   .header {
     width: 100%;
     padding-bottom: 15px;
@@ -40,4 +43,11 @@
     h1 { color: white; }
     h3 { color: white; padding: 0 15px; }
   }
+}
+
+.histogram {
+  margin-top: 30px;
+  border-top: 1px solid $gray;
+  padding-top: 15px;
+  h4 { margin-bottom: 30px; }
 }
