create toggle for linear or logarithmic scale views

--- a/stylesheets/base/colors.scss
+++ b/stylesheets/base/colors.scss
@@ -6,5 +6,5 @@ $dark-gray: #656565;
 $teal: #aaffea;
 // $blue: #4597f1;
 $blue: #2684ff;
-// $light-blue: #c9edff;
+$light-blue: #d5f1ff;
 // $light-blue: #E4F2FF;
