--- a/stylesheets/components/content.scss
+++ b/stylesheets/components/content.scss
@@ -16,11 +16,37 @@
   flex: 1;
   &:first-child { margin-right: 5px; }
   &:last-child { margin-left: 5px; }
+
   .header {
     width: 100%;
     padding-bottom: 15px;
     box-sizing: border-box;
   }
+
+  .scale-options {
+    margin-top: 12px;
+    align-items: center;
+    justify-content: flex-end;
+    .option {
+      padding: 5px 10px;
+      border-radius: 6px;
+      background-color: $lightest-gray;
+      color: $dark-gray;
+      cursor: pointer;
+      transition: .2s ease;
+      margin-left: 5px;
+      &-active {
+        font-weight: bold;
+        background-color: $light-blue;
+        color: $blue;
+      }
+      &:hover {
+        background-color: $blue;
+        color: $light-blue;
+      }
+    }
+  }
+
   .select {
     &__control {
       font-family: $text;
@@ -31,6 +57,7 @@
       color: $gray;
     }
   }
+
 }
 
 .vis {
