clean file structure

--- a/stylesheets/base/colors.scss
+++ b/stylesheets/base/colors.scss
@@ -4,7 +4,6 @@ $light-gray: #ededed;
 $gray: #c4c4c4;
 $dark-gray: #656565;
 $teal: #aaffea;
-// $blue: #4597f1;
 $blue: #2684ff;
 $light-blue: #d5f1ff;
-// $light-blue: #E4F2FF;
+$red: #f3898d;
