--- a/stylesheets/base/reset.scss
+++ b/stylesheets/base/reset.scss
@@ -1,7 +1,7 @@
 html, body, header, nav, h1, a,
 ul, li, strong, main, button, i, em,
 section, img, div, h2, p, form, h3, h4,
-fieldset, label, input, textarea,
+fieldset, feature, input, textarea,
 span, article, footer, time, small, select {
   margin: 0;
   padding: 0;
